Fix spacing on post detail on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -144,3 +144,13 @@ hr.footer-hr {
   box-shadow: 4px 4px 10px grey;
   padding: 25px 40px;
 }
+
+.vote-buttons-group {
+  margin-right: 20px
+}
+
+@media (max-width: 360px) {
+  .vote-buttons-group {
+    margin-bottom: 8px
+  }
+}
